Optimization of player name labels.